--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2 class="main-article__header">To be continued</h2> 
                 <p class="main-article__paragraph" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero rem, tempore quaerat ut molestias in non deserunt fugiat et molestiae temporibus minima libero beatae animi cupiditate repellendus nobis, nemo ducimus vel doloremque?</p>
             </div> 
-            <div class="copy">© By saraconor501</div>
+            <div class="copy">@By Banann228 </div>
     
         </article>
     
